2018-11-07 13:23  dpenkler

	* [r1760] Bump revision to 4.2.0

2018-11-07 13:22  dpenkler

	* [r1759] Remove annoying trailing whitespace

2018-10-11 09:43  dpenkler

	* [r1758] Update README and INSTALL files

2018-10-08 09:52  dpenkler

	* [r1757] Set default config file to $(sysconfdir)/gpib.conf

2018-10-02 16:15  dpenkler

	* [r1756] Commit for 4.2.0_rc1
	  - Fix generation of version information for ibvers()
	  - Added ChangeLog in top level directory (trunk)
	  - Linked kernel and user land ChangeLog's to top level Changelog
	  - Updated ChangeLog
	  - Fix reference to ib.h in lib/Makefile.am
	  - Fix MODULE_LICENSE warning when compiling fake module
	  - Fix php-bindings for PHP 7.2.10
	  - Fix bug with xeos/bin mode confusion in ibterm
	  - Bumped version number to 4.2.0

2018-06-25 00:46  fmhess

	* [r1755] Updated COPYING with latest gpl-2.0.txt download from FSF
	  in order to update their address.

2018-06-25 00:41  fmhess

	* [r1754] Updated COPYING with latest gpl-2.0.txt download from FSF
	  in order to update their address.

2018-05-29 23:20  fmhess

	* [r1753] Fix timer_setup usage on 4.14 kernel.

2018-05-08 23:26  fmhess

	* [r1752] Deal with timer_setup versus setup_timer using new
	  compat/include/linux/timer.h compatibility header.

2018-05-08 18:05  fmhess

	* [r1751] Added compatibility header for linux/sched/signal.h
	  header
	  which was introduced in 4.11.0. Fixes bug 61.

2018-05-08 17:50  fmhess

	* [r1750] Patch from Stefan.Mahr@zyxel.eu :
	  There's a timer initialisation bug in ni_usb driver, especially
	  for NI_USB_B. The timer is setup after first use of mod_timer
	  (ni_usb_b_read_serial_number->usb_send_bulk_msg), so kernel
	  throws a
	  bug in timer.c: BUG_ON(!timer->function);

2018-04-14 21:56  fmhess

	* [r1749] Renamed "device_files" target to "device_files_install"
	  and
	  made it respect DESTDIR.

2018-04-12 22:46  fmhess

	* [r1748] Don't mknod device files, or add "gpib" group during