@@ -7,12 +7,12 @@ The Linux GPIB Package
 
 This is a GPIB/IEEE-488 driver and utility package for LINUX.
 
-This software distribution package linux-gpib.x.x.x.tar.gz contains
+This software distribution package linux-gpib-x.x.x.tar.gz contains
 this README and two tarballs:
 
 1) kernel modules in linux-gpib-kernel-x.x.x.tar.gz
 
-2) user space software in linux-gpib-user.x.x..tar.gz containing the
+2) user space software in linux-gpib-use-x.x.x.tar.gz containing the
    config program, library, device scripts, examples and documentation
 
 Untar each file and see the respective INSTALL files for instructions
